--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,11 @@ body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-start-rgb));
   font-feature-settings: "ss01", "ss02", "cv01", "cv02";
+  cursor: none;
+}
+
+a, button, input, [role="button"] {
+  cursor: none;
 }
 
 @layer utilities {
